--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <section class="first">
                 <div class="leftsection">
-                    <img src="sid.png" alt="">
+                    <img src="sid1.png" alt="">
                 </div>
                 <div class="rightsection">
                     Hi, I am<span class="purple">
